<resources>
    <string name="app_name">Professional Details</string>
    <string name="server_name">http://10.0.2.2:8080/mapp</string>
    <string name="by_exp">By Extenprise</string>
    <string name="action_signin_cust">customer/SignIn.action</string>
    <string name="action_signup_cust">customer/SignUp.action</string>
    <string name="action_check_phone_cust">customer/PhoneExistsCheck.action</string>
    <string name="action_signin_serv">service/SignIn.action</string>
    <string name="action_signup_serv">service/SignUp.action</string>
    <string name="action_update_serv">service/Update.action</string>
    <string name="action_addwork_place">service/AddWorkPlace.action</string>
    <string name="action_getwork_place">service/GetWorkPlace.action</string>
    <string name="action_remove_work_place">service/RemoveWorkPlace.action</string>
    <string name="action_update_cust">customer/Update.action</string>
    <string name="action_check_phone_serv">service/PhoneExistsCheck.action</string>
    <string name="action_check_reg_no_serv">service/RegNoExistsCheck.action</string>
    <string name="action_search_serv_prov">service/Search.action</string>
    <string name="action_serv_prov_details">service/GetDetails.action</string>
    <string name="action_get_time_slots">service/GetTimeSlots.action</string>
    <string name="action_book_appont">service/BookAppont.action</string>
    <string name="action_appont_list">service/AppontList.action</string>
    <string name="action_past_appont_list">service/PastAppontList.action</string>
    <string name="action_confirm_appont">service/ConfirmAppont.action</string>
    <string name="action_cancel_appont">service/CancelAppont.action</string>
    <string name="action_save_rx_copy">service/SaveRxCopy.action</string>
    <string name="action_get_speciality">service/GetSpeciality.action</string>
    <string name="action_get_rx">service/GetRx.action</string>
    <string name="action_save_rx">service/SaveRx.action</string>
    <string name="action_get_medstore_list">service/GetMedStoreList.action</string>
    <string name="action_send_rx">service/SendRx.action</string>
    <string name="action_get_rx_inbox">service/GetRxInbox.action</string>
    <string name="action_send_availability_feedback">service/SendAvailability.action</string>
    <string name="action_get_rx_feedback">service/GetRxFeedback.action</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome!</string>
    <string name="action_settings">Settings</string>
    <string name="action_advanceSearch">Advance Search</string>
    <string name="login_url">login.do</string>
    <string name="search_doctor">Search A Doctor</string>
    <string name="adv_search">Advanced Search</string>
    <string name="location">Pune</string>
    <string name="title_activity_sign_up">Register with Medico</string>
    <string name="dob">Date of Birth</string>
    <string name="dob_label">Date of Birth:</string>
    <string name="dob_with_format">Date of Birth: (dd/mm/YYYY)</string>
    <string name="dob_format">dd/mm/YYYY *</string>
    <string-array name="city">
        <item>Pune</item>
    </string-array>
    <string name="weekly_off">Weekly Off *</string>
    <string name="country_code">+91</string>
    <string name="medical_store">Medical Store</string>
    <string name="clinic">Clinic</string>
    <string name="path_lab">Path Lab</string>
    <string name="scan_lab">Scanner Lab</string>
    <string-array name="work_place_type">
        <item>@string/clinic</item>
        <item>@string/medical_store</item>
        <item>@string/path_lab</item>
        <item>@string/scan_lab</item>
    </string-array>
    <string name="days">Days</string>
    <string-array name="gender_type">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="login_option">
        <item>Patient</item>
        <item>Medical Service Provider</item>
    </string-array>
    <string-array name="when">
        <item>@string/before_meal</item>
        <item>@string/after_meal</item>
    </string-array>
    <string name="before_meal">Before Meal</string>
    <string name="after_meal">After Meal</string>
    <string name="reg_no">Registration Number *</string>
    <string-array name="drug_type">
        <item>Tablet</item>
        <item>Syrup</item>
        <item>Gel</item>
        <item>Cream</item>
    </string-array>
    <string name="state">State</string>
    <string name="select_speciality">Select Speciality</string>
    <string name="other">Other</string>
    <string-array name="speciality">
        <item>@string/select_speciality</item>
        <item>Cardiologist</item>
        <item>Oncologist</item>
        <item>Gynaecologist</item>
        <item>Dermatologist</item>
        <item>Neurologist</item>
        <item>Psychologist</item>
        <item>Hematologist</item>
        <item>Pathologist</item>
        <item>Radiologist</item>
        <item>Urologist</item>
    </string-array>
    <string name="select_category">Select Category</string>
    <string-array name="service_category">
        <item>@string/select_category</item>
        <item>Physician</item>
        <item>Pharmacist</item>
        <item>Diagnostic Center</item>
    </string-array>
    <string-array name="gender_search">
        <item>Both</item>
        <item>Male</item>
        <item>Female</item>

    </string-array>
    <string-array name="consultation_fees">
        <item>&#45;</item>
        <item>&lt;200</item>
        <item>200&#45;500</item>
        <item>500&gt;</item>

    </string-array>
    <string-array name="speciality_search">
        <item>Select Speciality</item>
        <item>Speciality</item>
        <item>Cardiologist</item>
        <item>Oncologist</item>
        <item>Gynaecologist</item>
        <item>Dermatologist</item>
        <item>Neurologist</item>
        <item>Psychologist</item>
        <item>Hematologist</item>
        <item>Pathologist</item>
        <item>Radiologist</item>
        <item>Urologist</item>
    </string-array>
    <string-array name="service_category_search">
        <item>Select Category</item>
        <item>Physician</item>
        <item>Pharmacist</item>
        <item>Diagnostic Center</item>
    </string-array>
    <string name="gender">Gender</string>
    <string name="title_activity_advance__search_doc">Advance Search Doctor</string>
    <string name="title_activity_search_result">List of Doctor</string>
    <string name="title_activity_doctor_details">Doctor Details</string>
    <string name="title_activity_search_doctor_list">SearchDoctorList</string>
    <string name="title_activity_search_doctor_result">SearchDoctorResult</string>
    <string name="title_activity_search_doc_result_list">List of Doctors</string>
    <string name="title_activity_book_appointment">Book Appointment</string>
    <string name="title_activity_time_slots">TimeSlots</string>
    <string name="title_activity_sign_up_previous">SignUpPrevious</string>
    <string name="title_activity_home_screen">Home Screen</string>
    <string name="title_activity_view_appointment">ViewAppointment</string>
    <string name="title_activity_view_appointment_list">ViewAppointmentList</string>
    <string name="title_activity_appointment_details">AppointmentDetails</string>
    <string name="title_activity_patient_history">PatientHistoryActivity</string>
    <string name="title_activity_appointment_past_data">AppointmentPastData</string>
    <string name="title_activity_customer_sign_up">Customer Sign Up</string>
    <string name="title_activity_rx_activity">Rx Page</string>
    <string name="title_activity_view_rx">View Rx</string>
    <string name="title_activity_patients_home_screen">Home</string>
    <string name="title_activity_scanned_rx">Scanned Rx Copy</string>
    <string name="view_more">View More</string>
    <string name="rx_now">Rx Now</string>
    <string name="upload_rx">Upload Scanned Rx</string>
    <string name="date">Date</string>
    <string name="view_rx">View Rx</string>
    <string name="last_appt">Last Appointment</string>
    <string name="patient_name">Patient Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="time">Time</string>
    <string name="time_desc">AM/PM</string>
    <string name="age">Age</string>
    <string name="year">Years</string>
    <string name="weight">Weight *</string>
    <string name="kg">Kg</string>
    <string name="practice_days">Practice Days *</string>
    <string name="add">Add</string>
    <string name="alt_drug">Alternate Drug</string>
    <string name="strength">Strength</string>
    <string name="intake_steps">Intake Steps</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="dose_qty">Dose Qty</string>
    <string name="course_dur">Course Dur</string>
    <string name="drug_name">Drug Name</string>
    <string name="srno">Sr No</string>
    <string name="avail_days">Available Days</string>
    <string name="select_days">Select Days</string>
    <string name="date_of_birth">Date Of Birth *</string>
    <string name="gender1">Gender *</string>
    <string name="height">Height</string>
    <string name="cm">cm</string>
    <string name="done1">Done</string>
    <string name="add_another">Add Another Work Place</string>
    <string name="speciality_doc">Speciality</string>
    <string name="year_short">Yr</string>
    <string name="exp_short">Exp.</string>
    <string name="clinic_name">Clinic Name</string>
    <string name="available">Available</string>
    <string name="unavailable">Unavailable</string>
    <string name="pincode">Pin Code *</string>
    <string name="rs_sign">\u20B9</string>
    <string name="doc_appoint">View Doctor Appointments</string>
    <string name="my_report">View My Reports</string>
    <string name="my_rx">View My Rx</string>
    <string name="medico">Medico</string>
    <string name="history_data">History Data</string>
    <string name="past_apponts">Past Appointments</string>
    <string name="other_apponts">Other Appointments</string>
    <string name="other_data">Other Data</string>
    <string name="last_modified">Last Visited : </string>
    <string name="hello">Hello</string>
    <string name="hello_dr">Hello Dr</string>
    <string name="date_format">dd/mm/yyyy</string>
    <string name="rx_details">Rx Details</string>
    <string name="scan_rx_now">Scan Rx Copy Now!</string>
    <string name="already_scanned">It\'s Already Scanned</string>
    <string name="rx_copy">Rx Copy</string>
    <string name="no_past_appont">No appointments found!</string>
    <string name="error_num_should_be_positive">This field should be a positive number</string>
    <string name="error_invalid_number">Invalid number</string>
    <string name="error_past_date">Selected date has already passed by</string>
    <string name="error_only_alpha">Only letters are allowed</string>
    <string name="consult_fees">Consultation Fees</string>
    <string name="title_activity_first_flipper">FirstFlipperActivity</string>
    <string name="uploadImg">Upload Image</string>
    <string name="profile_text">View/Edit Profile</string>
    <string name="title_activity_view_profile_main">ViewProfileMain</string>
    <string name="edit1">EDIT</string>
    <string name="mail_id">Email Id</string>
    <string name="wrkplace_name">Work Place Name</string>
    <string name="wrkplace_loc">Work Place Location</string>
    <string name="phn_num1">Phone Number 1</string>
    <string name="phn_num2">Phone Number 2</string>
    <string name="wrkhrs">Work Hours</string>
    <string name="strt_tm">Start Time</string>
    <string name="end_tm">End Time</string>
    <string name="pract_day">Practise Days</string>
    <string name="open_rx">View Rx Inbox</string>
    <string name="pend_rx">To Undelivered Rx</string>
</resources>