<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.extenprise.mapp.service.activity.ServProvWorkDetailList">

    <TextView
        android:id="@+id/viewWorkDetCount"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:text="@string/count"
        android:textSize="18sp"
        android:background="@drawable/text_backg"
        android:textStyle="bold"
       />
    <TextView
        android:id="@+id/textViewEditWrkDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/edit1"
        android:layout_marginTop="8dp"
        android:layout_alignTop="@+id/viewWorkDetCount"
        android:layout_toLeftOf="@+id/viewEditWrkDetail"
        android:layout_toStartOf="@+id/viewEditWrkDetail"
        />
    <TextView
        android:id="@+id/viewEditWrkDetail"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:background="@drawable/pencil"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_alignTop="@+id/viewWorkDetCount"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="8dp"
        />
    <Spinner
        android:id="@+id/viewWrkPlaceType"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/viewWorkDetCount"
        android:background="@drawable/spinner"
        android:entries="@array/work_place_type"
        android:prompt="@string/work_place_type"
        />
    <EditText
        android:id="@+id/editTextWorkPlaceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewWorkDetCount"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:hint="@string/wrkplace_name"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:enabled="false"
        />


    <Spinner
        android:id="@+id/viewWrkPlaceCity"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/viewWrkPlaceType"
        android:spinnerMode="dropdown"
        android:background="@drawable/spinner"
        android:entries="@array/city"
        android:prompt="@string/city"
        />

    <EditText
        android:id="@+id/editTextWorkPlaceLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextWorkPlaceName"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:hint="@string/wrkplace_loc"
        android:textSize="14sp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:enabled="false"

        />


    <TextView
        android:id="@+id/viewPhnum1Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewWrkPlaceCity"
        android:text="@string/phn_num1"
        android:layout_marginTop="10dp"
        android:textSize="14sp"/>
    <EditText
        android:id="@+id/editTextPhnum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextWorkPlaceLoc"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:hint="@string/phn_num1"
        android:textSize="14sp"
        android:textStyle="bold"
        android:enabled="false"
        android:inputType="phone"
        />

    <TextView
        android:id="@+id/viewPhnum2Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewPhnum1Label"
        android:text="@string/phn_num2"
        android:layout_marginTop="15dp"
        android:textSize="14sp"/>
    <EditText
        android:id="@+id/editTextPhnum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPhnum1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:hint="@string/phn_num1"
        android:textSize="14sp"
        android:textStyle="bold"
        android:enabled="false"
        android:inputType="phone"
        />
    <TextView
        android:id="@+id/viewEmailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewPhnum2Label"
        android:text="@string/mail_id"
        android:layout_marginTop="15dp"
        android:textSize="14sp"/>
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPhnum2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:hint="@string/mail_id"
        android:textSize="14sp"
        android:textStyle="bold"
        android:enabled="false"
        android:inputType="phone"
        />
    <TextView
        android:id="@+id/viewWorkHrsLabel"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:text="@string/wrkhrs"
        android:textSize="16sp"
        android:background="@drawable/text_backg"
        android:layout_marginTop="10dp"
        android:layout_below="@id/viewEmailLabel"
        />
    <Button
        android:id="@+id/buttonStartTime"
        android:layout_width="160dp"

        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_height="40dp"
        android:layout_below="@+id/viewWorkHrsLabel"
        android:text="@string/strt_tm"
        android:onClick="showStartTimePicker"
        />
    <Button
        android:id="@+id/buttonEndTime"
        android:layout_width="160dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_height="40dp"
        android:layout_below="@+id/viewWorkHrsLabel"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/end_tm"
        android:onClick="showEndTimePicker"
        />
    <TextView
        android:id="@+id/viewpractDaysLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonStartTime"
        android:text="@string/pract_day"
        android:layout_marginTop="10dp"
        android:textSize="14sp"/>
    <TextView
        android:id="@+id/textViewPractiseDays"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/pract_day"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/buttonEndTime"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        />
    <Button
        android:id="@+id/buttonPractDays"
        android:background="@drawable/spinner"
        android:layout_width="160dp"
        android:text="@string/select_days"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewPractiseDays"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/viewConsFeesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonPractDays"
        android:text="@string/consult_fees"
        android:layout_marginTop="10dp"
        android:textSize="14sp"/>
    <EditText
        android:id="@+id/editTextConsFees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonPractDays"
        android:layout_alignLeft="@+id/buttonPractDays"
        android:hint="@string/mail_id"
        android:textSize="14sp"
        android:textStyle="bold"
        android:enabled="false"
        android:inputType="number"
        />











</RelativeLayout>
