<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.extenprise.mapp.service.activity.ScannedRxActivity">

    <Button
        android:id="@+id/scanNowButton"
        style="@style/MyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startImageCapture"
        android:text="@string/scan_rx_now" />

    <Button
        android:id="@+id/uploadButton"
        style="@style/MyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/scanNowButton"
        android:layout_toRightOf="@id/scanNowButton"
        android:onClick="startFileChooser"
        android:text="@string/already_scanned" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/scanNowButton">

        <ImageView
            android:id="@+id/rxCopyImageView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rx_copy" />
    </ScrollView>
</RelativeLayout>
