<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.extenprise.mapp.service.activity.MedicalStoreHomeActivity">

    <TextView
        android:id="@+id/viewWelcomeLbl"
        style="@style/LargeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/imageMedstore"
        android:layout_toRightOf="@+id/imageMedstore"
        android:text="@string/hello" />

    <ImageView
        android:id="@+id/imageMedstore"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/medstore" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewWelcomeLbl"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/imageMedstore"
        android:layout_toRightOf="@+id/imageMedstore"
        android:text="@string/last_modified" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewWelcomeLbl"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:hint="@string/date" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewWelcomeLbl"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/textViewDate"
        android:layout_toRightOf="@+id/textViewDate"
        android:hint="@string/time" />

    <View
        android:id="@+id/linenView"
        style="@style/HorizontalLineview"
        android:layout_marginTop="120dp" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linenView">

        <Button
            android:id="@+id/buttonOpenRx"
            style="@style/RectButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/linenView5"
            android:layout_alignEnd="@+id/linenView2"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/linenView2"
            android:enabled="true"
            android:onClick="viewRxInbox"
            android:text="@string/open_rx" />

        <Button
            android:id="@+id/buttonViewPendrx"
            style="@style/InactiveRectButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/linenView5"
            android:layout_alignLeft="@+id/linenView2"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/linenView2"
            android:enabled="false"
            android:text="@string/pend_rx" />


        <Button
            android:id="@+id/buttonView"
            style="@style/RectButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/linenView4"
            android:layout_alignEnd="@+id/linenView2"
            android:layout_alignRight="@+id/linenView2"
            android:layout_below="@+id/linenView5"
            android:enabled="false" />

        <Button
            android:id="@+id/buttonViewProfile"
            style="@style/RectButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/linenView4"
            android:layout_alignLeft="@+id/linenView2"
            android:layout_alignStart="@+id/linenView2"
            android:layout_below="@+id/linenView5"
            android:enabled="false"
            android:onClick="viewProfile"
            android:text="@string/profile_text" />

        <View
            android:id="@+id/linenView2"
            style="@style/VerticallLineview"
            android:layout_alignBottom="@+id/linenView4"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <View
            android:id="@+id/linenView4"
            style="@style/HorizontalLineview"
            android:layout_marginTop="240dp" />

        <View
            android:id="@+id/linenView5"
            style="@style/HorizontalLineview"
            android:layout_marginTop="120dp" />


    </RelativeLayout>


</RelativeLayout>
