<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"

    tools:context="com.extenprise.mapp.customer.activity.PatientsHomeScreenActivity">


    <TextView
        android:id="@+id/viewWelcomeLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/imagePatient"
        android:layout_toRightOf="@+id/imagePatient"
        android:text="@string/hello"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/imagePatient"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:src="@drawable/up1" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewWelcomeLbl"
        android:layout_toEndOf="@+id/imagePatient"
        android:layout_toRightOf="@+id/imagePatient"
        android:layout_marginTop="40dp"
        android:text="@string/lastModified" />

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewWelcomeLbl"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:hint="@string/date" />

    <TextView
        android:id="@+id/textViewTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewWelcomeLbl"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@+id/textViewDate"
        android:layout_toRightOf="@+id/textViewDate"
        android:hint="@string/time" />

    <View
        android:id="@+id/linenView"
        android:layout_width="fill_parent"
        android:layout_height="0.4dp"
        android:layout_marginTop="120dp"
        android:background="#9d9d9d" />


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linenView"
        >

        <Button
            android:id="@+id/buttonDoctorsAppointment"
            android:background="@drawable/square_round_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/linenView5"
            android:layout_alignParentTop="true"
            android:text="@string/doc_appoint"
            android:textSize="16sp"
            android:textColor="#b0171f"
            android:layout_alignRight="@+id/linenView2"
            android:layout_alignEnd="@+id/linenView2" />


       <Button
            android:id="@+id/buttonViewReport"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
           android:layout_alignBottom="@+id/linenView5"
           android:layout_alignParentTop="true"
            android:background="@drawable/square_round_button"
           android:layout_alignLeft="@+id/linenView2"
           android:layout_alignStart="@+id/linenView2"
            android:enabled="false"
            android:text="@string/my_report"
            android:textColor="#888"
            android:textSize="16sp" />


        <Button
            android:id="@+id/buttonViewRx"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"

            android:background="@drawable/square_round_button"
            android:text="@string/my_rx"
            android:textColor="#888"
            android:textSize="16sp"
            android:layout_below="@+id/linenView5"
            android:layout_alignBottom="@+id/linenView2"
            android:layout_alignRight="@+id/linenView2"
            android:layout_alignEnd="@+id/linenView2" />

        <Button
            android:id="@+id/buttonViewProfile"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/square_round_button"
            android:textColor="#b0171f"
            android:onClick="viewProfile"
            android:textSize="16sp"
            android:layout_below="@+id/linenView5"
            android:layout_alignBottom="@+id/linenView2"
            android:layout_alignLeft="@+id/linenView2"
            android:layout_alignStart="@+id/linenView2"
            android:text="@string/profile_text"/>

        <View
            android:id="@+id/linenView2"
            android:layout_width="0.4dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="#9d9d9d"
            android:layout_alignBottom="@+id/linenView4" />

        <View
            android:id="@+id/linenView4"
            android:layout_width="fill_parent"
            android:layout_height="0.4dp"
            android:layout_marginTop="240dp"
            android:background="#9d9d9d" />

        <View
            android:id="@+id/linenView5"
            android:layout_width="fill_parent"
            android:layout_height="0.4dp"
            android:layout_marginTop="120dp"
            android:background="#9d9d9d" />

    </RelativeLayout>

</RelativeLayout>
